--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
         "skipWords": [
           "ansible",
           "camelcase",
+          "dropdown",
           "donut",
           "hostnames",
           "ips",
