--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.0",
+    "@redhat-cloud-services/frontend-components": "^2.5.0",
     "@theforeman/builder": "^4.0.2",
     "@theforeman/stories": "^4.0.2",
     "@theforeman/test": "^4.0.2",
