--- a/.github/workflows/ruby_tests.yml
+++ b/.github/workflows/ruby_tests.yml
@@ -46,17 +46,29 @@ jobs:
           ref: KATELLO-3.14
       - name: check for postgres
         run: file /usr/share/postgresql/12/extension/
+      - name: Cache bundler
+        id: cache-bundler
+        uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-1_24-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-gems-1_24
+      - name: Cache npm
+        id: cache-npm
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-1_24-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-1_24
       - name: Set up Ruby 2.5
+        if: steps.cache-bundler.outputs.cache-hit != 'true'
         uses: actions/setup-ruby@v1
         with:
           ruby-version: 2.5
-      - uses: actions/cache@v1
-        with:
-          path: |
-            vendor/bundle
-            node_modules
-          key: ${{ runner.os }}-1_24-${{ hashFiles('Gemfile.lock') }}
       - name: Setup Node
+        if: steps.cache-npm.outputs.cache-hit != 'true'
         uses: actions/setup-node@v1
         with:
           node-version: 12
@@ -71,8 +83,8 @@ jobs:
       - name: Copy configuration files
         run: |
           cp ../foreman_rh_cloud/config/database.yml.example config/database.yml
-          cp ../foreman_rh_cloud/config/Gemfile.lock.example Gemfile.lock
-          cp ../foreman_rh_cloud/config/package-lock.json.example package-lock.json
+          cp ../foreman_rh_cloud/config/Gemfile.lock.gh_test Gemfile.lock
+          cp ../foreman_rh_cloud/config/package-lock.json.gh_test package-lock.json
       - name: Bundle install
         run: |
           gem install bundler:1.16.1
